<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding_vertical"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.studycase.vanard.vianrasyiddiyatma_1202154186_modul2.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/vresto1"/>

    <TextView
        android:id="@+id/pilih_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_menu"
        android:textSize="@dimen/text_size" />

    <RadioGroup
        android:id="@+id/radio_menu"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/dine_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dine_in"
            android:onClick="pilihMenu"/>

        <RadioButton
            android:id="@+id/take_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_away"
            android:onClick="pilihMenu"/>

    </RadioGroup>

    <Button
        android:id="@+id/pesan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan_sekarang"
        android:onClick="pesanSekarang"/>

</LinearLayout>
